--- a/pag1.html
+++ b/pag1.html
@@ -171,7 +171,7 @@
     <div class="select-label">Escoge de donde saldrá la plata</div>
     <div class="select-box">
       <div style="display: flex; align-items: center;">
-        <img src="iconn.png" alt="icono">
+        <img src="icon.png" alt="icono">
         Disponible
       </div>
       <span>›</span>
