--- a/pag1.html
+++ b/pag1.html
@@ -91,9 +91,11 @@
       font-weight: bold;
     }
 
-    .select-box img {
+    .select-box .logo-cuadro {
       width: 30px;
       height: 30px;
+      background-color: #d7007f;
+      border-radius: 5px;
       margin-right: 10px;
     }
 
@@ -171,7 +173,7 @@
     <div class="select-label">Escoge de donde saldrá la plata</div>
     <div class="select-box">
       <div style="display: flex; align-items: center;">
-        <img src="icon.png" alt="icono">
+        <div class="logo-cuadro"></div>
         Disponible
       </div>
       <span>›</span>
