--- a/pag1.html
+++ b/pag1.html
@@ -24,18 +24,13 @@
       overflow-y: auto;
     }
 
-    .overlay-bg {
-      position: absolute;
-      top: 0; left: 0; right: 0; bottom: 0;
-      background-color: #ffffff;
-      opacity: 0.95;
-      z-index: 1;
-    }
-
     .overlay-content {
       position: relative;
       z-index: 2;
       padding: 20px;
+      background: url('fondo.jpg') no-repeat center top;
+      background-size: cover;
+      min-height: 100%;
     }
 
     .info-box {
@@ -163,7 +158,6 @@
 </head>
 <body>
   <div class="overlay">
-    <div class="overlay-bg"></div>
     <div class="overlay-content">
       <div class="info-box">
         Revisa bien esta info, porque si le envías la plata a la persona incorrecta en Nequi no podremos recuperarla.
