--- a/pag1.html
+++ b/pag1.html
@@ -5,9 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Enviar Dinero</title>
   <style>
-    * {
-      box-sizing: border-box;
-    }
+    * { box-sizing: border-box; }
 
     html, body {
       margin: 0;
@@ -53,6 +51,7 @@
       display: block;
     }
 
+    /* Todos los inputs con fondo de imagen */
     input[type="tel"],
     input[type="number"],
     input[type="text"] {
@@ -61,8 +60,10 @@
       font-size: 18px;
       border: none;
       border-radius: 10px;
-      background-color: #fdf2fa;
+      background: url('barrita.jpg') repeat-x left center;
+      background-size: auto 100%;
       color: #111;
+      margin-bottom: 5px;
     }
 
     .subtext {
@@ -86,6 +87,13 @@
       z-index: 10;
     }
 
+    .select-label {
+      color: #cc007f;
+      margin-top: 30px;
+      margin-bottom: 5px;
+      font-weight: bold;
+    }
+
     .select-box {
       margin-top: 20px;
       background-color: white;
@@ -106,21 +114,7 @@
       border-radius: 5px;
     }
 
-    .select-label {
-      color: #cc007f;
-      margin-top: 30px;
-      margin-bottom: 5px;
-      font-weight: bold;
-    }
-
     .mensaje {
-      width: 100%;
-      padding: 14px;
-      font-size: 16px;
-      border: none;
-      border-radius: 10px;
-      background-color: #fdf2fa;
-      color: #111;
       margin-bottom: 20px;
     }
 
@@ -149,7 +143,6 @@
         font-size: 16px;
         padding: 12px;
       }
-
       .info-box {
         font-size: 14px;
       }
@@ -175,7 +168,8 @@
       </div>
 
       <div class="form-group">
-        <input type="text" class="mensaje" placeholder="Mensaje" />
+        <label for="msg">Mensaje</label>
+        <input type="text" id="msg" class="mensaje" placeholder="Mensaje" />
       </div>
 
       <div class="select-label">Escoge de donde saldrá la plata</div>
@@ -201,11 +195,8 @@
       }, 2000);
     }
 
-    // Manejar botón atrás para volver a index.html
     history.pushState(null, document.title, location.href);
-    window.addEventListener('popstate', function () {
-      location.href = 'index.html';
-    });
+    window.addEventListener('popstate', () => location.href = 'index.html');
   </script>
 </body>
 </html>
