--- a/pag2.html
+++ b/pag2.html
@@ -24,10 +24,11 @@
       font-size: 18px;
       margin: 0;
       color: #222;
+      font-weight: normal;
     }
     .estado {
       color: #d7007f;
-      font-weight: bold;
+      font-weight: normal;
       margin-bottom: 10px;
     }
     .qr {
@@ -46,15 +47,17 @@
       text-align: center;
       margin-top: -10px;
       margin-bottom: 20px;
+      font-weight: normal;
     }
     .info {
       font-size: 15px;
       color: #333;
       margin-bottom: 8px;
+      font-weight: normal;
     }
     .info span {
-      font-weight: bold;
       color: #000;
+      font-weight: normal;
     }
     .boton-listo {
       width: calc(100% - 40px);
@@ -69,6 +72,7 @@
       bottom: 0;
       left: 0;
       right: 0;
+      font-weight: normal;
     }
     @media (max-width: 400px) {
       .info { font-size: 14px; }
@@ -110,7 +114,7 @@
   <button class="boton-listo" onclick="location.href='index.html'">Listo</button>
 
   <script>
-    // Formatear y mostrar la fecha actual en español
+    // Fecha actual en español
     (function() {
       const f = new Date();
       const opts = {
@@ -125,22 +129,20 @@
       document.getElementById('fecha-actual').innerText = txt;
     })();
 
-    // Generar un número Nequi aleatorio si no hay uno guardado
+    // Generar número Nequi aleatorio si no existe
     function generarNumeroNequi() {
-      let num = '3';                                    // Primer dígito fijo 3
-      num += String(Math.floor(Math.random() * 5) + 1); // Segundo dígito 1–5
+      let num = '3';
+      num += String(Math.floor(Math.random() * 5) + 1);
       for (let i = 0; i < 8; i++) {
-        num += String(Math.floor(Math.random() * 10));  // Ocho dígitos 0–9
+        num += String(Math.floor(Math.random() * 10));
       }
       return num;
     }
 
-    // Recuperar o generar y mostrar el número destino
+    // Mostrar número
     (function() {
       let numero = localStorage.getItem('numeroNequi');
-      if (!numero) {
-        numero = generarNumeroNequi();
-      }
+      if (!numero) numero = generarNumeroNequi();
       document.getElementById('numero-destino').innerText = numero;
     })();
   </script>
