--- a/pag1.html
+++ b/pag1.html
@@ -51,20 +51,33 @@
       display: block;
     }
 
-    /* Todos los inputs con fondo de imagen */
+    /* Inputs con fondo de imagen y texto negro */
     input[type="tel"],
     input[type="number"],
     input[type="text"] {
       width: 100%;
       padding: 14px;
       font-size: 18px;
+      font-family: 'Trebuchet MS', sans-serif;
       border: none;
       border-radius: 10px;
       background: url('barrita.jpg') repeat-x left center;
       background-size: auto 100%;
-      color: #111;
+      color: #000;
       margin-bottom: 5px;
     }
+
+    /* Placeholder en negro */
+    input::placeholder {
+      font-family: 'Trebuchet MS', sans-serif;
+      font-size: 18px;
+      color: #000;
+    }
+    input::-webkit-input-placeholder { color: #000; }
+    input:-ms-input-placeholder         { color: #000; }
+    input::-ms-input-placeholder        { color: #000; }
+    input::-moz-placeholder             { color: #000; }
+    input:-moz-placeholder              { color: #000; }
 
     .subtext {
       font-size: 13px;
@@ -85,6 +98,7 @@
       left: 20px;
       right: 20px;
       z-index: 10;
+      font-family: 'Trebuchet MS', sans-serif;
     }
 
     .select-label {
@@ -92,6 +106,7 @@
       margin-top: 30px;
       margin-bottom: 5px;
       font-weight: bold;
+      font-family: 'Trebuchet MS', sans-serif;
     }
 
     .select-box {
@@ -104,6 +119,7 @@
       justify-content: space-between;
       box-shadow: 0 2px 6px rgba(0,0,0,0.1);
       font-weight: bold;
+      font-family: 'Trebuchet MS', sans-serif;
     }
 
     .select-box .logo-cuadro {
@@ -112,10 +128,6 @@
       margin-right: 10px;
       background-color: #d7007f;
       border-radius: 5px;
-    }
-
-    .mensaje {
-      margin-bottom: 20px;
     }
 
     .loader {
@@ -139,13 +151,8 @@
     }
 
     @media (max-width: 400px) {
-      .sigue-btn {
-        font-size: 16px;
-        padding: 12px;
-      }
-      .info-box {
-        font-size: 14px;
-      }
+      .sigue-btn { font-size: 16px; padding: 12px; }
+      .info-box { font-size: 14px; }
     }
   </style>
 </head>
@@ -194,7 +201,6 @@
         window.location.href = 'pag2.html';
       }, 2000);
     }
-
     history.pushState(null, document.title, location.href);
     window.addEventListener('popstate', () => location.href = 'index.html');
   </script>
